--- a/Makefile.in
+++ b/Makefile.in
@@ -187,6 +187,8 @@
 #
 #  Makefile for building PerlMagick.
 
+# If source files missing, see if they can be obtained via VPATH
+
 
 
 
@@ -259,9 +261,11 @@ DIST_COMMON = $(srcdir)/m4/Makefile.am $(srcdir)/config/Makefile.am \
 	$(top_srcdir)/magick/MagickCore-config.in \
 	$(top_srcdir)/magick/MagickCore.pc.in \
 	$(top_srcdir)/magick/version.h.in $(srcdir)/magick.sh.in \
-	$(top_srcdir)/PerlMagick/Magick.pm.in \
-	$(top_srcdir)/PerlMagick/Makefile.PL.in \
 	$(top_srcdir)/PerlMagick/check.sh.in \
+	$(top_srcdir)/PerlMagick/Magick.pm.in \
+	$(top_srcdir)/PerlMagick/Magick.xs.in \
+	$(top_srcdir)/PerlMagick/Makefile.PL.in \
+	$(top_srcdir)/PerlMagick/typemap.in \
 	$(top_srcdir)/utilities/animate.1.in \
 	$(top_srcdir)/utilities/compare.1.in \
 	$(top_srcdir)/utilities/composite.1.in \
@@ -332,13 +336,14 @@ CONFIG_CLEAN_FILES = common.shi config/configure.xml \
 	magick/ImageMagick.pc Magick++/lib/ImageMagick++.pc \
 	Magick++/lib/Magick++.pc magick/Magick-config \
 	magick/MagickCore-config magick/MagickCore.pc magick/version.h \
-	magick.sh PerlMagick/Magick.pm PerlMagick/Makefile.PL \
-	PerlMagick/check.sh utilities/animate.1 utilities/compare.1 \
-	utilities/composite.1 utilities/conjure.1 utilities/convert.1 \
-	utilities/display.1 utilities/identify.1 \
-	utilities/ImageMagick.1 utilities/import.1 utilities/mogrify.1 \
-	utilities/montage.1 utilities/stream.1 wand/MagickWand-config \
-	wand/MagickWand.pc wand/Wand-config wand/Wand.pc
+	magick.sh PerlMagick/check.sh PerlMagick/Magick.pm \
+	PerlMagick/Magick.xs PerlMagick/Makefile.PL PerlMagick/typemap \
+	utilities/animate.1 utilities/compare.1 utilities/composite.1 \
+	utilities/conjure.1 utilities/convert.1 utilities/display.1 \
+	utilities/identify.1 utilities/ImageMagick.1 \
+	utilities/import.1 utilities/mogrify.1 utilities/montage.1 \
+	utilities/stream.1 wand/MagickWand-config wand/MagickWand.pc \
+	wand/Wand-config wand/Wand.pc
 CONFIG_CLEAN_VPATH_FILES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
@@ -5038,11 +5043,15 @@ magick/version.h: $(top_builddir)/config.status $(top_srcdir)/magick/version.h.i
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 magick.sh: $(top_builddir)/config.status $(srcdir)/magick.sh.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
+PerlMagick/check.sh: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/check.sh.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
 PerlMagick/Magick.pm: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/Magick.pm.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+PerlMagick/Magick.xs: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/Magick.xs.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 PerlMagick/Makefile.PL: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/Makefile.PL.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
-PerlMagick/check.sh: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/check.sh.in
+PerlMagick/typemap: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/typemap.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 utilities/animate.1: $(top_builddir)/config.status $(top_srcdir)/utilities/animate.1.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
@@ -10434,13 +10443,20 @@ magick-install-data-local:
 magick-uninstall-local:
 	rm -f $(DESTDIR)$(magickincarchdir)/magick-baseconfig.h
 
-# If source files missing, see if they can be obtained via VPATH
-perl-sources:
+$(PERLMAGICK)/@MAGICK_ABI_SUFFIX@.xs: $(PERLMAGICK)/Magick.xs
+	$(AM_V_GEN) $(LN_S) $(notdir $^) $@
+
+$(PERLMAGICK)/@MAGICK_ABI_SUFFIX@.pm: $(PERLMAGICK)/Magick.pm
+	$(AM_V_GEN) $(LN_S) $(notdir $^) $@
+
+perl-quantum-sources: $(PERLMAGICK)/@MAGICK_ABI_SUFFIX@.xs $(PERLMAGICK)/@MAGICK_ABI_SUFFIX@.pm
+
+perl-sources: perl-quantum-sources
 	@if test -n "$(VPATH)" ; then \
 	  echo "Linking PerlMagick Sources ..." ; \
 	  imagemagick=`(cd $(VPATH) ; pwd)` && \
 	  ( cd $(PERLMAGICK) && \
-	    sh $$imagemagick/config/lndir.sh $$imagemagick/$(PERLMAGICK) ) \
+	    sh $$imagemagick/config/lndir.sh $$imagemagick/$(PERLMAGICK) ; ) \
 	fi ; \
 	touch perl-sources
 
@@ -10498,7 +10514,10 @@ perl-sources:
 @WITH_PERL_TRUE@	( if test -f Makefile ; then $(MAKE) CC='@CC@' clean ; fi ) ; \
 @WITH_PERL_TRUE@	( if test -f Makefile ; then $(MAKE) CC='@CC@' clean ; fi ) ; \
 @WITH_PERL_TRUE@	rm -f Makefile.old PerlMagick ; \
-@WITH_PERL_TRUE@	rm -f t/output* t/jng/*_tmp.jng t/*/output* )
+@WITH_PERL_TRUE@	rm -f t/output* t/jng/*_tmp.jng t/*/output* ; \
+@WITH_PERL_TRUE@	rm -f @MAGICK_ABI_SUFFIX@.xs;\
+@WITH_PERL_TRUE@	rm -f @MAGICK_ABI_SUFFIX@.pm;\
+@WITH_PERL_TRUE@	rm -f Magick.pm;)
 @WITH_PERL_TRUE@	rm -f perl-sources
 
 @WITH_PERL_TRUE@distclean-perl: clean-perl
